--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <ul>
                 <li>Built business specific web applications.</li>
                 <li>Developed remote compilation service allowing students to learn to code on their browser.</li>
-                <li>Worked on a javascript web token based authentication system<./li>
+                <li>Worked on a javascript web token based authentication system.</li>
             </ul>
         </div>
         <div class="timeline-event">
