--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                 <span><b>GraphColor:</b> greedy k-coloring algorithm implementation</span>
                 <i>Winter 2019</i>
             </div>
+            <p>This command line program solves the k-coloring problem in theoretical computer science using a fast greedy algorithm. I initially created this app to solve the register allocation problem for programming language 'Bulat'</p>
         </div>
             <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
@@ -149,9 +150,12 @@
         </div>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
-                <span><b>DinoChat:</b> whimsical instant messaging app</span>
+                <span><b>Triceratalk:</b> whimsical instant messaging app</span>
                 <i>Spring 2019</i>
             </div>
+            <p>
+                This instant messaging web app is built using a Vue.js frontent and a Express.js + MongoDB backend. It features cutesy dinosaur stickers, as well as a sticker management system allowing users to create and send their own stickers.
+            </p>
         </div>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
