--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e79a7b56fb.js"></script>
+    <style>
+    @media print {
+        body {
+            font-size: 12px;
+        }
+        section {
+            page-break-inside: avoid;
+        }
+    }
+    </style>
 </head>
 <body>
     <header>
