--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
     <title>Thomas Barrett</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/e79a7b56fb.js"></script>
+    <script src="https://kit.fontawesome.com/ec135c73c5.js"></script>
     <style>
     @media print {
         body {
             font-size: 12px;
         }
-        section {
-            page-break-inside: avoid;
-        }
+
     }
     </style>
 </head>
@@ -109,6 +107,7 @@
             <span>CSS</span>
             <span>Express</span>
             <span>Firebase</span>
+            <span>Full Stack Development</span>
             <span>Git</span>
             <span>HTML</span>
             <span>Java</span>
@@ -143,20 +142,20 @@
                 <i>Winter 2018</i>
             </div>
             <p>I created the Bulat programming language in C++ using the LLVM compiler framework with the goal of learning about how languages are designed and implemented. Bulat is a procedural programming language with a statically checked type system. It has many of the necessary components of a general purpose programming language including control flow, functions, and complex data types such as arrays</p>
-        </div>    
+        </div>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
                 <span><b>GraphColor:</b> greedy k-coloring algorithm implementation</span>
                 <i>Winter 2019</i>
             </div>
-            <p>This command line program solves the k-coloring problem in theoretical computer science using a fast greedy algorithm. I initially created this app to solve the register allocation problem for programming language 'Bulat'</p>
+            <p>This command line program solves the k-coloring problem in theoretical computer science using a fast greedy algorithm. I initially created this program to solve the register allocation problem for programming language 'Bulat'.</p>
         </div>
             <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
                 <span><b>8086 Dissassembler</b></span>
                 <i>Spring 2019</i>
             </div>
-            <p>Decodes binary instructions for the 8086 processor and outputs human readable assembler instructions in gnu assembler syntax.</p>
+            <p>This command line program decodes binary instructions for the 8086 processor and outputs human readable assembler instructions in gnu assembler syntax. This gave me a very thorough understanding of instruction encoding on a simplified </p>
         </div>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
@@ -164,14 +163,17 @@
                 <i>Spring 2019</i>
             </div>
             <p>
-                This instant messaging web app is built using a Vue.js frontent and a Express.js + MongoDB backend. It features cutesy dinosaur stickers, as well as a sticker management system allowing users to create and send their own stickers.
+                This instant messaging web app is built using a Vue.js frontent and a Express.js + MongoDB backend. It features dinosaur themed stickers, as well as a sticker management system allowing users to create and send their own stickers.
             </p>
         </div>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
-                <span><b>RideBoard:</b> coordinating rides for large groups</span>
-                <i>Summer 2019</i>
+                <span><b>Iron Man August:</b> competitive workout web app</span>
+                <i>Spring 2019</i>
             </div>
+            <p>
+                This web app is built using a Vue.js frontent and a Express.js + MongoDB backend. It allows users to track their progress in a fitness challenge  while comparing their progress to other users on a live leaderboard.
+            </p>
         </div>
     </section>
 </body>
