--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
                 <span><b>Iron Man August:</b> competitive workout web app</span>
-                <i>Spring 2019</i>
+                <i>Summer 2019</i>
             </div>
             <p>
                 This web app is built using a Vue.js frontent and a Express.js + MongoDB backend. It allows users to track their progress in a fitness challenge  while comparing their progress to other users on a live leaderboard.
