--- a/index.html
+++ b/index.html
@@ -101,12 +101,14 @@
     <section>
         <h2>Skills</h2>
         <div class="pillbox-container">
+            <span>Back End Development</span>
             <span>C</span>
             <span>C++</span>
             <span>Cocoa</span>
             <span>CSS</span>
             <span>Express</span>
             <span>Firebase</span>
+            <span>Front End Development</span>
             <span>Full Stack Development</span>
             <span>Git</span>
             <span>HTML</span>
@@ -124,6 +126,7 @@
             <span>Swift</span>
             <span>Tensorflow</span>
             <span>Vue</span>
+            <span>Web Development</span>
             <span>x86 Assembly</span>
         </div>
     </section>
