--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             <span>C++</span>
             <span>Cocoa</span>
             <span>CSS</span>
+            <span>Data Structures</span>
             <span>Express</span>
             <span>Firebase</span>
             <span>Front End Development</span>
@@ -115,6 +116,7 @@
             <span>Java</span>
             <span>Javascript</span>
             <span>LLVM</span>
+            <span>Machine Learning</span>
             <span>MongoDB</span>
             <span>Node</span>
             <span>Numpy</span>
