--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
             <span>React</span>
             <span>Swift</span>
             <span>Tensorflow</span>
+            <span>Unit Testing</span>
             <span>Vue</span>
             <span>Web Development</span>
             <span>x86 Assembly</span>
