--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             <span>Data Structures</span>
             <span>Express</span>
             <span>Firebase</span>
+            <span>Full Stack Development</span>
             <span>Git</span>
             <span>HTML</span>
             <span>Java</span>
