--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <span><b>8086 Dissassembler</b></span>
                 <i>Spring 2019</i>
             </div>
-            <p>This command line program decodes binary instructions for the 8086 processor and outputs human readable assembler instructions in gnu assembler syntax.</p>
+            <p>This command line program decodes binary instructions for the 8086 processor and outputs human readable assembler instructions in gnu assembler syntax. This is the early stages of what I eventually want to build into an 8086 emulator.</p>
         </div>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
