--- a/index.html
+++ b/index.html
@@ -142,19 +142,19 @@
         </div>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
-                <span><b>Bulat:</b> programming language</span>
-                <i>Winter 2018</i>
+                <span><b>Raytracer:</b> photorealistic rendering</span>
+                <i>Fall 2018</i>
             </div>
-            <p>I created the Bulat programming language in C++ using the LLVM compiler framework with the goal of learning about how languages are designed and implemented. Bulat is a procedural programming language with a statically checked type system. It has many of the necessary components of a general purpose programming language including control flow, functions, and complex data types such as arrays</p>
+            <p>Raytracing is a rendering technique used in animation that creates photorealistic graphics by computing the path that a ray of light would take before hitting the "camera". With the goal of learning more about this technique, I implemented a raytracer in Java which rended simple geometrical objects such as cubes and spheres with proper shading and shadows. </p>
         </div>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
-                <span><b>GraphColor:</b> greedy k-coloring algorithm implementation</span>
-                <i>Winter 2019</i>
+                <span><b>Bulat:</b> programming language</span>
+                <i>Winter 2018</i>
             </div>
-            <p>This command line program solves the k-coloring problem in theoretical computer science using a fast greedy algorithm. I initially created this program to solve the register allocation problem for programming language 'Bulat'.</p>
+            <p>I created the Bulat programming language in C++ using the LLVM compiler framework with the goal of learning about how languages are designed and implemented. Bulat is a procedural programming language with a statically checked type system. It has many of the necessary components of a general purpose programming language including control flow, functions, and compound data types such as arrays</p>
         </div>
-            <div class="timeline-event">
+        <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
                 <span><b>8086 Dissassembler</b></span>
                 <i>Spring 2019</i>
@@ -166,18 +166,14 @@
                 <span><b>Triceratalk:</b> whimsical instant messaging app</span>
                 <i>Spring 2019</i>
             </div>
-            <p>
-                This instant messaging web app is built using a Vue.js frontent and a Express.js + MongoDB backend. It features dinosaur themed stickers, as well as a sticker management system allowing users to create and send their own stickers.
-            </p>
+            <p> This instant messaging web app is built using a Vue.js frontent and a Express.js + MongoDB backend. It features dinosaur themed stickers, as well as a sticker management system allowing users to create and send their own stickers.</p>
         </div>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
                 <span><b>Iron Man August:</b> competitive workout web app</span>
                 <i>Summer 2019</i>
             </div>
-            <p>
-                This web app is built using a Vue.js frontent and a Express.js + MongoDB backend. It allows users to track their progress in a fitness challenge  while comparing their progress to other users on a live leaderboard.
-            </p>
+            <p> This web app is built using a Vue.js frontent and a Express.js + MongoDB backend. It allows users to track their progress in a fitness challenge  while comparing their progress to other users on a live leaderboard.</p>
         </div>
     </section>
 </body>
