--- a/index.html
+++ b/index.html
@@ -163,17 +163,17 @@
         </div>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
-                <span><b>Triceratalk:</b> whimsical instant messaging app</span>
+                <span><b>Triceratalk:</b> dinasaur themed instant messaging app</span>
                 <i>Spring 2019</i>
             </div>
-            <p> This instant messaging web app is built using a Vue.js frontent and a Express.js + MongoDB backend. It features dinosaur themed stickers, as well as a sticker management system allowing users to create and send their own stickers.</p>
+            <p> The Triceratalk instant messaging web app is built using a Vue.js frontent and a Express.js + MongoDB backend. This app allows users to send and recieve instant messages from either an individual, or an entire group. It also features dinosaur themed stickers, as well as a sticker management system allowing users to create and send their own stickers. </p>
         </div>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
                 <span><b>Iron Man August:</b> competitive workout web app</span>
                 <i>Summer 2019</i>
             </div>
-            <p> This web app is built using a Vue.js frontent and a Express.js + MongoDB backend. It allows users to track their progress in a fitness challenge  while comparing their progress to other users on a live leaderboard.</p>
+            <p> I created the Iron Man August web app for a fitness competition at my school. This web app is built using a Vue.js frontent and a Express.js + MongoDB backend. It allows users to track their own progress in completing the challenge while comparing their progress to other users on a live leaderboard.</p>
         </div>
     </section>
 </body>
