--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@
                 <span><b>8086 Dissassembler</b></span>
                 <i>Spring 2019</i>
             </div>
-            <p>This command line program decodes binary instructions for the 8086 processor and outputs human readable assembler instructions in gnu assembler syntax. The 8086 processor is the predecessor to the moder x86_64 architecture. This is the early stages of what I eventually want to build into an 8086 emulator.</p>
+            <p>This command line program decodes binary instructions for the 8086 processor and outputs human readable assembler instructions in gnu assembler syntax. The 8086 processor is the predecessor to the modern x86_64 architecture. This is the early stages of what I eventually want to build into an 8086 emulator.</p>
         </div>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
                 <span><b>Triceratalk:</b> dinasaur themed instant messaging app</span>
                 <i>Spring 2019</i>
             </div>
-            <p> The Triceratalk instant messaging web app is built using a Vue.js frontent and a Express.js + MongoDB backend. This app allows users to send and recieve instant messages from either an individual, or an entire group. It also features dinosaur themed stickers, as well as a sticker management system allowing users to create and send their own stickers. </p>
+            <p> The Triceratalk instant messaging web app is built using a Vue.js frontent and a Express.js + MongoDB backend. This app allows users to send and recieve instant messages from either an individual, or an entire group. It also features dinosaur themed stickers, as well as a sticker management system. </p>
         </div>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
