--- a/index.html
+++ b/index.html
@@ -135,17 +135,17 @@
         <h2>Projects</h2>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
-                <span><b>DeliDash:</b> mobile app for ordering sandwiches</span>
+                <span><b>DeliDash:</b> mobile app</span>
                 <i>Spring 2017</i>
             </div>
             <p>The <i>DeliDash</i> iOS mobile app streamlined the deli preordering system at my school. Utilizing a native Swift and CocoaTouch frontend and a Firebase backend+database I allowed students at my school to order a custom sandwich with the click of a button.</p>
         </div>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
-                <span><b>Raytracer:</b> photorealistic rendering</span>
+                <span><b>Raytracer:</b> command line program</span>
                 <i>Fall 2018</i>
             </div>
-            <p>Raytracing is a rendering technique used in animation that creates photorealistic graphics by computing the path that a ray of light would take before hitting the "camera". With the goal of learning more about this technique, I implemented a raytracer in Java which rended simple geometrical objects such as cubes and spheres with proper shading and shadows. </p>
+            <p>Raytracing is a rendering technique used in animation that creates photorealistic images by computing the path that a ray of light would take before hitting the "camera". I implemented a raytracer with the goal of learning more about this technique. My implementation was able to render simple geometric objects such as cubes and spheres with proper shading and shadows. </p>
         </div>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
@@ -156,7 +156,7 @@
         </div>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
-                <span><b>8086 Dissassembler</b></span>
+                <span><b>8086 Dissassembler:</b> command line program</span>
                 <i>Spring 2019</i>
             </div>
             <p>This command line program decodes binary instructions for the 8086 processor and outputs human readable assembler instructions in gnu assembler syntax. The 8086 processor is the predecessor to the modern x86_64 architecture. This is the early stages of what I eventually want to build into an 8086 emulator.</p>
