--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <span><b>DeliDash:</b> mobile app</span>
                 <i>Spring 2017</i>
             </div>
-            <p>The <i>DeliDash</i> iOS mobile app streamlined the deli preordering system at my school. Utilizing a native Swift and CocoaTouch frontend and a Firebase backend+database I allowed students at my school to order a custom sandwich with the click of a button.</p>
+            <p>The <i>DeliDash</i> iOS mobile app streamlined the deli preordering system at my school by allowing students at my school to create and save a custom sandwich order as well as order a sandwich with the click of a button. The app utilizes a native Swift and CocoaTouch frontend and a Firebase backend+database. </p>
         </div>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
