--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <span><b>Raytracer:</b> command line program</span>
                 <i>Fall 2018</i>
             </div>
-            <p>Raytracing is a rendering technique used in animation that creates photorealistic images by computing the path that a ray of light would take before hitting the "camera". I implemented a raytracer with the goal of learning more about this technique. My implementation was able to render simple geometric objects such as cubes and spheres with proper shading and shadows. </p>
+            <p>Raytracing is a rendering technique used in animation that creates photorealistic images by computing the path that a ray of light would take before hitting the "camera". I implemented a raytracer with the goal of learning more about this technique. My implementation is able to render simple geometric objects such as cubes and spheres with proper shading and shadows. </p>
         </div>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
@@ -163,7 +163,7 @@
         </div>
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
-                <span><b>Triceratalk:</b> dinasaur themed instant messaging app</span>
+                <span><b>Triceratalk:</b> instant messaging app</span>
                 <i>Spring 2019</i>
             </div>
             <p> The Triceratalk instant messaging web app is built using a Vue.js frontent and a Express.js + MongoDB backend. This app allows users to send and recieve instant messages from either an individual, or an entire group. It also features dinosaur themed stickers, as well as a sticker management system. </p>
