--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
         
         <div class="timeline-event">
             <div class="split-container" style="margin: 10px 0;">
-                <span><b>Caltech: </b>Teaching Assistant (CS11)</span>
-                <i>Summer 2019</i>
+                <span><b>Caltech: </b>CS11 Teaching Assistant</span>
+                <i>Fall 2019</i>
             </div>
             <ul>
-                <li>I am currently a TA for the CS11 course on C programming.</li>
-                <li>Hold weekly office hours to answer questions</li>
-                <li>Grade homework sets.</li>
+                <li>CS11 is Caltech's course on the C programming language. As a teaching assistant, 
+                    I grade homework sets as well as hold weekly office hours during which I answer
+                    questions and offer assistance.</li>
             </ul>
         </div>
         
