--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                 <i>Fall 2019</i>
             </div>
             <ul>
-                <li>CS11 is Caltech's course on the C programming language. As a teaching assistant, 
-                    I grade homework sets as well as hold weekly office hours during which I answer
+                <li>CS11 is Caltech's course on the C programming language.</li>
+                <li>I grade homework sets as well as hold weekly office hours during which I answer
                     questions and offer assistance.</li>
             </ul>
         </div>
